--- a/templates/sidemenu.html.twig
+++ b/templates/sidemenu.html.twig
@@ -35,7 +35,7 @@
 
 				<p class="m-0">
 					<a href="{{ path('employe_index') }}">
-						<i class="fa fa-list"></i>
+						<i class="fas fa-user"></i>
 						<span class="istyle">
 							<b>Employé</b>
 						</span>
@@ -69,7 +69,7 @@
 
 				<p class="m-0">
 					<a href="{{ path('documents_index') }}">
-						<i class="far fa-file-alt"></i>
+						<i class="fas fa-file-alt"></i>
 						<span class="istyle">
 							<b>Documents</b>
 						</span>
@@ -96,7 +96,7 @@
 
 				<p class="m-0">
 					<a href="{{ path('employe_index') }}">
-						<i class="fa fa-list"></i>
+						<i class="fas fa-user"></i>
 						<span class="istyle">
 							<b>Employé</b>
 						</span>
@@ -134,7 +134,7 @@
 
 				<p class="m-0">
 					<a href="{{ path('documents_index') }}">
-						<i class="far fa-file-alt"></i>
+						<i class="fas fa-file-alt"></i>
 						<span class="istyle">
 							<b>Documents</b>
 						</span>
@@ -165,7 +165,7 @@
 
 				<p class="m-0">
 					<a href="#">
-						<i class="fa fa-list"></i>
+						<i class="fas fa-user"></i>
 						<span class="istyle">
 							<b>Mon Service</b>
 						</span>
@@ -211,7 +211,7 @@
 
 			<p class="m-0">
 				<a href="{{ path('documents_index') }}">
-					<i class="far fa-file-alt"></i>
+					<i class="fas fa-file-alt"></i>
 					<span class="istyle">
 						<b>Mes Documents</b>
 					</span>
@@ -258,7 +258,7 @@
 
 			<p class="m-0">
 				<a href="{{ path('documents_index') }}">
-					<i class="far fa-file-alt"></i>
+					<i class="fas fa-file-alt"></i>
 					<span class="istyle">
 						<b>Mes Documents</b>
 					</span>
