dashboard index fix

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -23,12 +23,20 @@ $police1:'News Cycle', sans-serif;
 /********************************************
                  COMMUN CSS
 *********************************************/
+html{
+  height: 100%;
+}
 body {
   background-color: $color1;
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
- }
+  height: 100%;
+}
+.full-height{
+  min-height: 70%;
+}
+
 *{
   box-sizing: border-box;
 }
@@ -134,11 +142,11 @@ thead{
 .iconMenu{
   display: flex;
   flex-direction: column;
+  align-items: center;
   background-color: $color5;
   margin: 0;
-  padding: 0 12px;
-  width: 40px;
-  height: 100vh;
+  padding: 0 20px;
+  width: 50px;
   z-index: 1000;
 }
 .iconMenu i{
@@ -152,7 +160,9 @@ thead{
   width: 200px;
   z-index: 1000;
   position: absolute;
+  align-items: flex-start !important;
   background-color: $color9;
+  height: 100%;
 }
 #burgerclick:hover{
   cursor: pointer;
@@ -163,7 +173,8 @@ thead{
   margin-top: 22px;
 }
 .menuGauche{
-  width: 40px;
+  width: 100px;
+  min-height: 100%;
 }
 .bodyindex{
  position: relative;
@@ -183,6 +194,9 @@ thead{
 }
 .header i{
   color: $color5;
+}
+.dropdown-menu i{
+  color: $color3;
 }
 .logoheader a{
   color: $color5 !important;
@@ -336,10 +350,24 @@ thead{
 }
 .cardBody{
   font-size: 12px;
-  height: 20px;
+  height: 30vh;
+}
+.cardBody a{
+  text-decoration: none;
+}
+.cardBody h5{
+  color: $color4;
+}
+.cardBody h5:hover{
+  color: $color6;
 }
 h5{
   font-size: 15px;
+}
+h6{
+  color: $color4;
+  border-bottom: 1px solid $color1;
+  font-weight: bolder;
 }
 
 /********************************************
