--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,9 +31,9 @@
 			<div class="container-fluid">{% include "menu.html.twig" %}</div>
 		{% endblock %}
 
-		<div class="container-fluid">
+		<div class="container-fluid full-height">
 
-			<div class="row flex-nowrap">
+			<div class="row flex-nowrap full-height">
 
 				{% block menu %}
 					{% include "sidemenu.html.twig" %}
