--- a/templates/absences/new.html.twig
+++ b/templates/absences/new.html.twig
@@ -4,11 +4,20 @@
 {% endblock %}
 
 {% block body %}
-<div class="container-fluid col-10 col-lg-8 mr-auto ml-auto col-sm-6  p-0 bodyindex">
-	<h1>Signaler une nouvelle absence</h1>
-
-	{{ include('absences/_form.html.twig') }}
-
-	<a class='btn btn-primary' href="{{ path('profil_index') }}">Revenir à l'accueil</a>
+<div class="container-fluid col-10 col-lg-8 mr-auto ml-auto col-sm-6 p-0 bodyindex">
+	<div class="row">
+		<div class="col-md-12 col-lg-12 p-2 pt-3">
+			<div class="card">
+				<div class="d-flex">
+					<div class="card-body">
+						<h6 class="card-title">
+							Signaler une nouvelle absence
+						</h6>
+						{{ include('absences/_form.html.twig') }}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 {% endblock %}
