--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -7,7 +7,7 @@
 
 {% block body %}
 
-<div class="container-fluid col-10 col-lg-8 mr-auto ml-auto col-sm-6  p-0 bodyindex">
+<div class="container-fluid col-10 col-lg-8 mr-auto ml-auto col-sm-6 p-0 bodyindex">
 
 	{% if (app.user.roles[0] == 'ROLE_ADMIN') %}
 
@@ -19,14 +19,14 @@
 							<img class="card-img-top imgVignetteProfil" src="/images/photo_profil/{{ app.user.photo }}" alt="Ajoutez une photo :)">
 						</div>
 						<div class="card-body cardBody">
-							<h5 class="card-title">
+							<h6 class="card-title">
 								{{ app.user.prenom|capitalize ~ ' ' ~ app.user.nom|capitalize }}
-							</h5>
+							</h6>
 							<p>Bienvenu(e) sur votre dashboard</p>
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn btn-primary rounded-pill float-right">Modifier mon profil</a>
+						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn btn-primary bgc-pink rounded-pill float-right">Modifier mon profil</a>
 					</div>
 				</div>
 			</div>
@@ -34,14 +34,13 @@
 			<div class="col-md-8 p-0 col-lg-8 p-2">
 				<div class="card">
 					<div class="flexCard">
-						<img class="card-img-top imgVignette" src="" alt="Ajouter photo employés">
 						<div class="card-body cardBody">
 							<a href="{{ path('employe_index') }}">
-								<h5 class="card-title">Gestion employés</h5>
+								<h5 class="card-title">GESTION EMPLOYES</h5>
 							</a>
 							<p>
 								<table class="table table-bordered table-striped">
-									<thead class='thead-dark'>
+									<thead>
 										<tr>
 											<th>Nom</th>
 											<th>Prénom</th>
@@ -70,20 +69,17 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('employe_new') }}" class="btn btn-primary rounded-pill float-right">Ajouter un employé</a>
+						<a href="{{ path('employe_new') }}" class="btn bgc-pink btn-primary rounded-pill float-right">Ajouter un employé</a>
 					</div>
 				</div>
 			</div>
 
-			<div class="col-md-12 p-0 col-lg-12 p-2">
+			<div class="col-md-6 col-lg-6 p-2">
 				<div class="card">
 					<div class="flexCard">
-						<div class="centrerImgProfil">
-							<img src="/images/images_front/documentsimg.jpg" alt="Ajouter une photo" class="card-img-top imgVignette">
-						</div>
 						<div class="card-body cardBody">
-							<a href="{{ path('documents_profil') }}">
-								<h5 class="card-title">Gestion documents</h5>
+							<a href="{{ path('documents_index') }}">
+								<h5 class="card-title">GESTION DOCUMENTS</h5>
 							</a>
 							<table class="table table-bordered table-striped">
 								<thead>
@@ -109,12 +105,65 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn btn-primary rounded-pill float-right">
+						<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn bgc-pink btn-primary rounded-pill float-right">
 							Partager un document
 						</a>
 					</div>
 				</div>
 			</div>
+
+			<div class="col-md-6 col-lg-6 p-2">
+				<div class="card">
+					<div class="flexCard">
+						<div class="card-body cardBody">
+							<a href="{{ path('absences_index') }}">
+								<h5 class="card-title">GESTION ABSENCES</h5>
+							</a>
+							<p>
+								<table class="table table-bordered table-striped">
+									<thead>
+										<tr>
+											<th>Date debut</th>
+											<th>Date retour</th>
+											<th>Statut</th>
+											<th>Actions</th>
+										</tr>
+									</thead>
+									<tbody>
+										{% for i, absence in absences %}
+											{% if i >= absences|length - 2 %}
+												<tr>
+													<td>{{ absence.dateDebut ? absence.dateDebut|date('d-m-Y') : '' }}</td>
+													<td>{{ absence.dateRetour ? absence.dateRetour|date('d-m-Y') : '' }}</td>
+													<td {{ absence.statut == 'En attente' ? "class='table-warning'" : '' }} 
+														{{ absence.statut == 'Validée' ? "class='table-success'" : '' }} 
+														{{ absence.statut == 'Refusée' ? "class='table-danger'" : '' }}>
+														{{ absence.statut }}
+													</td>
+													<td>
+														<a href="{{ path('absences_show', {'id': absence.id}) }}">Voir plus</a>
+														<a href="{{ path('absences_validation', {'id': absence.id}) }}">Valider</a>
+													</td>
+												</tr>
+											{% endif %}
+										{% else %}
+											<tr>
+												<td colspan="4">Aucune absence</td>
+											</tr>
+										{% endfor %}
+									</tbody>
+								</table>
+							</p>
+						</div>
+					</div>
+					<div class="card-footer cardFooter">
+						<a href="{{ path('absences_index') }}" class="btn bgc-pink btn-primary rounded-pill float-right">
+							Valider une absence
+						</a>
+					</div>
+				</div>
+			</div>
+
 		</div>
 
 	{% endif %}
@@ -129,14 +178,14 @@
 							<img class="card-img-top imgVignetteProfil" src="/images/photo_profil/{{ app.user.photo }}" alt="Ajoutez une photo :)">
 						</div>
 						<div class="card-body cardBody">
-							<h5 class="card-title">
+							<h6 class="card-title">
 								{{ app.user.prenom|capitalize ~ ' ' ~ app.user.nom|capitalize }}
-							</h5>
+							</h6>
 							<p>Bienvenu(e) sur votre dashboard</p>
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn btn-primary rounded-pill float-right">Modifier mon profil</a>
+						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn bgc-pink btn-primary rounded-pill float-right">Modifier mon profil</a>
 					</div>
 				</div>
 			</div>
@@ -144,14 +193,13 @@
 			<div class="col-md-8 p-0 col-lg-8 p-2">
 				<div class="card">
 					<div class="flexCard">
-						<img class="card-img-top imgVignette" src="" alt="Ajouter photo employés">
 						<div class="card-body cardBody">
 							<a href="{{ path('employe_index') }}">
-								<h5 class="card-title">Gestion employés</h5>
+								<h5 class="card-title">GESTION EMPLOYES</h5>
 							</a>
 							<p>
 								<table class="table table-bordered table-striped">
-									<thead class='thead-dark'>
+									<thead>
 										<tr>
 											<th>Nom</th>
 											<th>Prénom</th>
@@ -162,11 +210,11 @@
 									<tbody>
 										{% for i, employe in employes %}
 											{% if i >= employes|length - 2 %}
-												<tr>
-													<td>{{ employe.nom|capitalize }}</td>
-													<td>{{ employe.prenom|capitalize }}</td>
-													<td>{{ employe.email }}</td>
-													<td>{{ employe.service|capitalize }}</td>
+												<tr class='text-wrap'>
+													<td class='text-wrap'>{{ employe.nom|capitalize }}</td>
+													<td class='text-wrap'>{{ employe.prenom|capitalize }}</td>
+													<td class='text-wrap'>{{ employe.email }}</td>
+													<td class='text-wrap'>{{ employe.service|capitalize }}</td>
 												</tr>
 											{% endif %}
 										{% else %}
@@ -180,7 +228,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('employe_new') }}" class="btn btn-primary rounded-pill float-right">Ajouter un employé</a>
+						<a href="{{ path('employe_new') }}" class="btn bgc-pink btn-primary rounded-pill float-right">Ajouter un employé</a>
 					</div>
 				</div>
 			</div>
@@ -188,12 +236,9 @@
 			<div class="col-md-6 p-0 col-lg-6 p-2">
 				<div class="card">
 					<div class="flexCard">
-						<div class="centrerImgProfil">
-							<img src="/images/images_front/documentsimg.jpg" alt="Ajouter une photo" class="card-img-top imgVignette">
-						</div>
 						<div class="card-body cardBody">
-							<a href="{{ path('documents_profil') }}">
-								<h5 class="card-title">Gestion documents</h5>
+							<a href="{{ path('documents_index') }}">
+								<h5 class="card-title">GESTION DOCUMENTS</h5>
 							</a>
 							<table class="table table-bordered table-striped">
 								<thead>
@@ -223,7 +268,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn btn-primary rounded-pill float-right">
+						<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn bgc-pink btn-primary rounded-pill float-right">
 							Partager un document
 						</a>
 					</div>
@@ -233,12 +278,9 @@
 			<div class="col-md-6 p-0 col-lg-6 p-2">
 				<div class="card">
 					<div class="flexCard">
-						<div class="centrerImgProfil">
-							<img src="/images/images_front/documentsimg.jpg" alt="Ajouter une photo" class="card-img-top imgVignette">
-						</div>
 						<div class="card-body cardBody">
 							<a href="{{ path('absences_index') }}">
-								<h5 class="card-title">Gestion absences</h5>
+								<h5 class="card-title">GESTION ABSENCES</h5>
 							</a>
 							<table class="table table-bordered table-striped">
 								<thead>
@@ -259,7 +301,12 @@
 												<td>{{ absence.employe.prenom|capitalize }}</td>
 												<td>{{ absence.dateDebut ? absence.dateDebut|date('d-m-Y') : '' }}</td>
 												<td>{{ absence.dateRetour ? absence.dateRetour|date('d-m-Y') : '' }}</td>
-												<td>{{ absence.statut }}</td>
+												<td {{ absence.statut == 'En attente' ? "class='table-warning'" : '' }} 
+													{{ absence.statut == 'Validée' ? "class='table-success'" : '' }} 
+													{{ absence.statut == 'Refusée' ? "class='table-danger'" : '' }}>
+													{{ absence.statut }}
+												</td>
+
 											</tr>
 										{% endif %}
 									{% else %}
@@ -272,7 +319,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('absences_new') }}" class="btn btn-primary rounded-pill float-right">
+						<a href="{{ path('absences_new') }}" class="btn bgc-pink btn-primary rounded-pill float-right">
 							Valider une absence
 						</a>
 					</div>
@@ -292,14 +339,14 @@
 							<img class="card-img-top imgVignetteProfil" src="/images/photo_profil/{{ app.user.photo }}" alt="Ajoutez une photo :)">
 						</div>
 						<div class="card-body cardBody">
-							<h5 class="card-title">
+							<h6 class="card-title">
 								{{ app.user.prenom|capitalize ~ ' ' ~ app.user.nom|capitalize }}
-							</h5>
+							</h6>
 							<p>Bienvenu(e) sur votre dashboard</p>
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn btn-primary rounded-pill float-right">Modifier mon profil</a>
+						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn bgc-pink btn-primary rounded-pill float-right">Modifier mon profil</a>
 					</div>
 				</div>
 			</div>
@@ -307,12 +354,9 @@
 			<div class="col-md-8 p-0 col-lg-8 p-2">
 				<div class="card">
 					<div class="flexCard">
-						<div class="centrerImgProfil">
-							<img src="/images/images_front/documentsimg.jpg" alt="Ajouter une photo" class="card-img-top imgVignette">
-						</div>
 						<div class="card-body cardBody">
 							<a href="{{ path('absences_index') }}">
-								<h5 class="card-title">Gestion absences</h5>
+								<h5 class="card-title">GESTION ABSENCES</h5>
 							</a>
 							<table class="table table-bordered table-striped">
 								<thead>
@@ -333,7 +377,11 @@
 												<td>{{ absence.employe.prenom|capitalize }}</td>
 												<td>{{ absence.dateDebut ? absence.dateDebut|date('d-m-Y') : '' }}</td>
 												<td>{{ absence.dateRetour ? absence.dateRetour|date('d-m-Y') : '' }}</td>
-												<td>{{ absence.statut }}</td>
+												<td {{ absence.statut == 'En attente' ? "class='table-warning'" : '' }} 
+													{{ absence.statut == 'Validée' ? "class='table-success'" : '' }} 
+													{{ absence.statut == 'Refusée' ? "class='table-danger'" : '' }}>
+													{{ absence.statut }}
+												</td>
 											</tr>
 										{% endif %}
 									{% else %}
@@ -346,7 +394,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('absences_new') }}" class="btn btn-primary rounded-pill float-right">
+						<a href="{{ path('absences_new') }}" class="btn bgc-pink btn-primary rounded-pill float-right">
 							Valider une absence
 						</a>
 					</div>
@@ -356,12 +404,9 @@
 			<div class="col-md-12 p-0 col-lg-12 p-2">
 				<div class="card">
 					<div class="flexCard">
-						<div class="centrerImgProfil">
-							<img src="/images/images_front/documentsimg.jpg" alt="Ajouter une photo" class="card-img-top imgVignette">
-						</div>
 						<div class="card-body cardBody">
-							<a href="{{ path('documents_profil') }}">
-								<h5 class="card-title">Gestion documents</h5>
+							<a href="{{ path('documents_index') }}">
+								<h5 class="card-title">GESTION DOCUMENTS</h5>
 							</a>
 							<table class="table table-bordered table-striped">
 								<thead>
@@ -391,7 +436,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn btn-primary rounded-pill float-right">
+						<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn bgc-pink btn-primary rounded-pill float-right">
 							Partager un document
 						</a>
 					</div>
@@ -411,13 +456,13 @@
 							<img class="card-img-top imgVignetteProfil" src="/images/photo_profil/{{ app.user.photo }}" alt="pas d'image">
 						</div>
 						<div class="card-body cardBody">
-							<h5 class="card-title">{{ app.user.prenom|capitalize }}
-								{{ app.user.nom|capitalize }}</h5>
+							<h6 class="card-title">{{ app.user.prenom|capitalize }}
+								{{ app.user.nom|capitalize }}</h6>
 							<p>Bienvenu(e) sur votre dashboard</p>
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn btn-primary rounded-pill float-right">Modifier</a>
+						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn btn-primary bgc-pink rounded-pill float-right">Modifier</a>
 					</div>
 				</div>
 			</div>
@@ -425,14 +470,13 @@
 			<div class="col-md-8 p-0 col-lg-8 p-2">
 				<div class="card">
 					<div class="flexCard">
-						<img class="card-img-top imgVignette" src="/images/images_front/absenceimg.jpg" alt="pas d'image">
 						<div class="card-body cardBody">
-							<a href="#">
-								<h5 class="card-title">Mes absences</h5>
+							<a href="{{ path('absences_index') }}">
+								<h5 class="card-title">MES ABSENCES</h5>
 							</a>
 							<p>
 								<table class="table table-bordered table-striped">
-									<thead class='thead-dark'>
+									<thead>
 										<tr>
 											<th>Date debut</th>
 											<th>Date retour</th>
@@ -444,7 +488,11 @@
 											<tr>
 												<td>{{ absence.dateDebut ? absence.dateDebut|date('d-m-Y') : '' }}</td>
 												<td>{{ absence.dateRetour ? absence.dateRetour|date('d-m-Y') : '' }}</td>
-												<td {{ absence.statut == 'En attente' ? "class='table-danger'" : '' }}>{{ absence.statut }}</td>
+												<td {{ absence.statut == 'En attente' ? "class='table-warning'" : '' }} 
+													{{ absence.statut == 'Validée' ? "class='table-success'" : '' }} 
+													{{ absence.statut == 'Refusée' ? "class='table-danger'" : '' }}>
+													{{ absence.statut }}
+												</td>
 											</tr>
 										{% else %}
 											<tr>
@@ -458,7 +506,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('employe_absences_new') }}" class="btn btn-primary rounded-pill float-right">Signaler une absence</a>
+						<a href="{{ path('employe_absences_new') }}" class="btn btn-primary bgc-pink rounded-pill float-right">Signaler une absence</a>
 					</div>
 				</div>
 			</div>
@@ -466,12 +514,9 @@
 			<div class="col-md-12 p-0 col-lg-12 p-2">
 				<div class="card">
 					<div class="flexCard">
-						<div class="centrerImgProfil">
-							<img src="/images/images_front/documentsimg.jpg" alt="pas d'image" class="card-img-top imgVignette">
-						</div>
 						<div class="card-body cardBody">
 							<a href="#">
-								<h5 class="card-title">Mes documents</h5>
+								<h5 class="card-title">MES DOCUMENTS</h5>
 							</a>
 							<table class="table table-bordered table-striped">
 								<thead>
@@ -501,7 +546,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn btn-primary rounded-pill float-right">
+						<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn btn-primary bgc-pink rounded-pill float-right">
 							Partager un document
 						</a>
 					</div>
