--- a/templates/employe/index.html.twig
+++ b/templates/employe/index.html.twig
@@ -3,19 +3,41 @@
 {% block title %}Dashboard Employés{% endblock %}
 
 {% block body %}
-<div class="container-fluid col-10 col-lg-8 mr-auto ml-auto col-sm-6  p-0 bodyindex">
-{#############################################################################################}
-            {###################### ROLE ADMIN ######################}
-{#############################################################################################}
+<div class="container-fluid col-9 col-lg-8 mr-auto ml-auto col-sm-9 p-0 bodyindex">
+    <div class="row">
+    
+    {#############################################################################################}
+                {###################### ROLE ADMIN ######################}
+    {#############################################################################################}
 
+    {% if (app.user.roles[0] == 'ROLE_ADMIN') %}
+        {% include "/employe/_admin_employe_index.html.twig" %}
+    {% endif %}
 
+    {#############################################################################################}
+                {###################### ROLE RH ######################}
+    {#############################################################################################}
+    
+    {% if (app.user.roles[0] == 'ROLE_RH') %}
+        {% include "/employe/_rh_employe_index.html.twig" %}
+    {% endif %}
 
+    {#############################################################################################}
+                {###################### ROLE MANAGER ######################}
+    {#############################################################################################}
+    
+    {% if (app.user.roles[0] == 'ROLE_MANAGER') %}
+        {% include "/employe/_manager_employe_index.html.twig" %}
+    {% endif %}
 
-{#############################################################################################}
-            {###################### ROLE RH ######################}
-{#############################################################################################}
+    {#############################################################################################}
+                {###################### ROLE EMPLOYE ######################}
+    {#############################################################################################}
 
-
-
+    {% if (app.user.roles[0] == 'ROLE_EMPLOYE') %}
+        {% include "/employe/_employe_employe_index.html.twig" %}
+    {% endif %}
+    
+    </div>
 </div>
 {% endblock %}
