--- a/templates/employe/edit.html.twig
+++ b/templates/employe/edit.html.twig
@@ -4,11 +4,27 @@
 
 {% block body %}
 <div class="container-fluid col-10 col-lg-8 mr-auto ml-auto col-sm-6  p-0 bodyindex">
-    <h1>Modifier employé</h1>
-
-    {{ include('employe/_form.html.twig', {'button_label': 'Enregistrer'}) }}
-
-    {# <a href="{{ path('employe_index') }}">Retour à la liste</a> #}
-
-    {{ include('employe/_delete_form.html.twig') }}</div>
+    <div class="row">
+        <div class="col-md-12 col-lg-12 p-2 pt-3">
+            <div class="card">
+                <div class="d-flex">
+                    <div class="card-body">
+                        <h6 class="card-title">
+                            Modifications
+                        </h6>
+                        {{ include('employe/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+                        <div class="d-flex justify-content-end">
+                            <div class="d-inline-flex">
+                                {% if (app.user.roles[0] == 'ROLE_ADMIN') or (app.user.roles[0] == 'ROLE_RH') or (app.user.roles[0] == 'ROLE_MANAGER')%}
+                                    {{ include('employe/_delete_form.html.twig') }}
+                                    <a class='btn btn-info rounded-pill mr-1' href="{{ path('employe_index') }}">Retour à la liste</a>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
