--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -348,6 +348,9 @@ thead{
   font-size: 12px;
   height: 40vh;
 }
+.formSize{
+  padding: 2px 0;
+}
 .cardBody{
   font-size: 12px;
   height: 30vh;
