--- a/templates/employe/_form.html.twig
+++ b/templates/employe/_form.html.twig
@@ -1,8 +1,7 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
     <div>
-        <a href="{{ path('employe_index') }}" class="btn btn-secondary retourListeForm">Retour à la liste</a> 
-        <button class="btn btn-success buttonNew">{{ button_label|default('Enregistrer') }}</button>       
+        <button class="btn bgc-pink rounded-pill float-right">{{ button_label|default('Enregistrer') }}</button>       
     </div>
     
 {{ form_end(form) }}
