--- a/templates/documents/new.html.twig
+++ b/templates/documents/new.html.twig
@@ -3,11 +3,23 @@
 {% block title %}New Documents{% endblock %}
 
 {% block body %}
+
 <div class="container-fluid col-10 col-lg-8 mr-auto ml-auto col-sm-6 p-0 bodyindex">
-    <h1>Create new Documents</h1>
+	<div class="row">
+		<div class="col-md-12 col-lg-12 p-2 pt-3">
+			<div class="card">
+				<div class="d-flex">
+					<div class="card-body">
+						<h6 class="card-title">
+							Envoyer un document
+						</h6>
+                        {{ include('documents/_form.html.twig') }}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
-    {{ include('documents/_form.html.twig') }}
-
-    <a href="{{ path('documents_index') }}">back to list</a>
 </div>
 {% endblock %}
