--- a/templates/employe/new.html.twig
+++ b/templates/employe/new.html.twig
@@ -3,13 +3,21 @@
 {% block title %}Nouvel Employé{% endblock %}
 
 {% block body %}
-<div class="container-fluid col-10 col-lg-8 mr-auto ml-auto col-sm-6  p-0 bodyindex">
-    <div class="formulaireContainer">
-        <h1>Ajout d'un nouvel employé</h1>
-    
-        <div class="formulaire">
-            {{ include('employe/_form.html.twig') }}
-        </div>
-    </div>
+
+<div class="container-fluid col-10 col-lg-8 mr-auto ml-auto col-sm-6 p-0 bodyindex">
+	<div class="row">
+		<div class="col-md-12 col-lg-12 p-2 pt-3">
+			<div class="card">
+				<div class="d-flex">
+					<div class="card-body">
+						<h6 class="card-title">
+                            Ajouter un nouvel employé
+						</h6>
+                        {{ include('employe/_form.html.twig') }}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 {% endblock %}
