typos fixed and titles' font set

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -33,6 +33,10 @@ body {
   font-family: 'Montserrat', sans-serif;
   height: 100%;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto', sans-serif;
+}
 .full-height{
   min-height: 100%;
 }
