--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -194,7 +194,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn bgc-pink btn-primary rounded-pill float-right">Modifier mon profil</a>
+						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn bgc-pink btn-primary rounded-pill float-right">Modifier profil</a>
 					</div>
 				</div>
 			</div>
@@ -361,7 +361,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn bgc-pink btn-primary rounded-pill float-right">Modifier mon profil</a>
+						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn bgc-pink btn-primary rounded-pill float-right">Modifier profil</a>
 					</div>
 				</div>
 			</div>
@@ -483,7 +483,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn btn-primary bgc-pink rounded-pill float-right">Modifier</a>
+						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn btn-primary bgc-pink rounded-pill float-right">Modifier profil</a>
 					</div>
 				</div>
 			</div>
