footer et mentions

--- a/templates/employe/new.html.twig
+++ b/templates/employe/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Nouvel Employé{% endblock %}
 
 {% block body %}
-<div class="container-fluid col-10 col-lg-8 mr-auto ml-auto col-sm-6  p-0 bodyindex">
+<div class="container-fluid col-10 col-md-10 mr-auto ml-auto col-sm-6  p-0 bodyindex">
     <div class="formulaireContainer">
         <h1>Ajout d'un nouvel employé</h1>
     
