--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -1,13 +1,13 @@
 <div class="header row">
 
-	<div class="col-2 p-0">
+	<div class="col-2 p-1">
 		<i class="fas fa-bars" id="burgerclick"></i>
 	</div>
 
 	<div class="row justify-content-between col-10 pr-0">
 
 		<div class="col-2">
-			<a class="navbar-brand" href="{{ path('profil_index') }}"><img src="/images/images_front/logosclair.png" alt="rrr" style="width:50px;"></a>
+			<a class="navbar-brand" href="{{ path('profil_index') }}"><img src="/images/images_front/logosclair.png" alt="logo my team" style="width:50px;"></a>
 		</div>
 
 		
