--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -13,6 +13,8 @@ $color4: #286fb4;
 $color5: #ffffff;
 $color6: #df4c73;
 
+$color10: red;
+
 $color7:  rgba(255, 255, 255, 1);
 $color8: rgba(255, 255, 255, 0);
 $color9: rgba(255, 255, 255, 0.8);
@@ -42,6 +44,11 @@ h1{
   margin: 15px 0;
   padding: 0;
 }
+h5{
+  border-bottom: 1px solid $color1;
+  font-weight: bolder;
+}
+/* --- boutons --- */
 .bgc-pink{
   background-color: $color6;
   color: $color5;
@@ -52,9 +59,66 @@ h1{
   color: $color6;
   border: solid 2px $color6;
 }
-h5{
-  border-bottom: 1px solid $color1;
-  font-weight: bolder;
+.btn-bleu{
+  background-color: $color4;
+  color: $color5;
+  border: solid transparent 2px;
+}
+.btn-bleu:hover{
+  background-color: $color5;
+  color: $color4;
+  border: 1px solid $color4;
+}
+.btn-pink{
+  background-color: $color6;
+  color: $color5;
+  border: solid transparent 2px;
+}
+.btn-pink:hover{
+  background-color: $color5;
+  color: $color6;
+  border: 1px solid $color6;
+}
+.btn-rouge{
+  background-color: $color10;
+  color: $color5;
+  border: solid transparent 2px;
+}
+.btn-rouge:hover{
+  background-color: $color5;
+  color: $color10;
+  border: 1px solid $color10;
+}
+
+/* --- thead ---*/
+.thead-bleu{
+  background-color: $color4;
+}
+.thead-bleuclair{
+  background-color: $color3;
+}
+.thead-bleuplusclair{
+  background-color: $color2;
+}
+.thead-pink{
+  background-color: $color6;
+}
+.thead-gris{
+  background-color: $color1;
+}
+/* --- tableaux responsives --- */
+table{
+  width: 100%;
+  border-collapse: collapse;
+}
+th, td{
+  padding: 10px;
+  text-align: left;
+  border: solid 1px $color1;
+}
+th{
+  background-color: $color4;
+  color: $color5;
 }
 /*    --   - Navbar -   --    */
 .menu{
@@ -87,27 +151,7 @@ thead{
   color: $color6;
   text-decoration: none;
 }
-/* boutons */
-.btn-bleu{
-  background-color: $color4;
-  color: $color5;
-  border: none;
-}
-.btn-bleu:hover{
-  background-color: $color5;
-  color: $color4;
-  border: 1px solid $color4;
-}
-.btn-pink{
-  background-color: $color6;
-  color: $color5;
-  border: none;
-}
-.btn-pink:hover{
-  background-color: $color5;
-  color: $color6;
-  border: 1px solid $color6;
-}
+
 /* ------------------ Base.html.twig -------------------- */
 
 /*    --   - Menu gauche -   --    */
@@ -144,6 +188,7 @@ thead{
 .iconMenu i{
   color: $color4;
   line-height: 32px;
+  font-size: 18px;
 }
 .iconMenu i:hover{
   color: $color6;
@@ -161,6 +206,7 @@ thead{
 #burgerclick{
   margin-left: 12px;
   margin-top: 22px;
+  font-size: 18px;
 }
 .menuGauche{
   width: 40px;
@@ -171,6 +217,7 @@ thead{
 .displayusername{
   display: none;
 }
+
 
 /*    --   - Fin Menu gauche -   --    */
 
@@ -220,8 +267,8 @@ thead{
   justify-content: center;
 }
 .connexionContainer{
-  width: 650px;
-  height: 400px;
+  width: 250px;
+  height: 200px;
   background-image: linear-gradient(to top, $color8, $color7);
   margin: 160px auto;
   border-radius: 10px;
@@ -261,14 +308,14 @@ thead{
 .formulaireContainer{
   margin: 70px auto;
   font-size: 15px;
-  width: 740px;
+  width: 300px;
   background-image: linear-gradient(to top, rgba(255,0,0,0), rgba(200,200,200,1));
   padding: 15px;
   height: 850px;
   border-radius: 10px;
 }
 .input{
-  width: 710px;
+  width: 270px;
   margin: 3px 0;
   border: none;
   border-radius: 5px;
@@ -276,12 +323,12 @@ thead{
   padding: 5px;
 }
 .input2{
-  width: 710px;
+  width: 270px;
   margin: 3px 0;
   border: none;
   border-radius: 5px;
 }
-.buttonNew{
+/* .buttonNew{
   margin-top: 10px;
   background-color: $color6;
   border: none;
@@ -290,7 +337,7 @@ thead{
 }
 .buttonNew:hover{
   background-color: $color3;
-}
+} */
 .retourListeForm{
   margin-top: 10px;
   box-shadow: 1px 1px 12px black;
@@ -299,7 +346,7 @@ thead{
   border: none;
 }
 .formulaire{
-  width: 710px;
+  width: 270px;
 }
 
 /* ----------- home-> index.html.twig ------------- */
@@ -332,40 +379,110 @@ thead{
 }
 .hauteurcard{
   font-size: 12px;
-  height: 40vh;
+  height: 35vh;
 }
 .cardBody{
   font-size: 12px;
-  height: 20px;
+  height: 20vh;
 }
 h5{
   font-size: 15px;
+}
+/* ------------ cgu.html.twig --------------- */
+.containerMentions{
+ margin: 0 auto;
+ font-size: 12px;
+ width: 290px;
+}
+.containerMentions p{
+  text-align: justify;
+}
+h6{
+  color: #286fb4;
+}
+.soustitrementions{
+  color: $color4;
 }
 
 /********************************************
                  FOOTER
 *********************************************/
-
-
+footer{
+  height: 80px;
+  background-color: $color3;
+  font-size: 10px;
+}
+.footer{
+  text-align: center;
+  vertical-align: middle;
+  line-height: 80px;
+}
+.footer a{
+  text-decoration: none;
+  margin: 0 1px;
+  color: $color5;
+  border-right: 1px solid $color5;
+  padding: 0 3px;
+}
+.footer a:hover{
+  color: $color4;
+}
+.borderleft{
+  border-right: none !important;
+}
+.imglogo{
+   width: 50px;
+  }
 /* ---------------------------------------- */
               /*MEDIA QUERIES*/
 /* ---------------------------------------- */
 @media screen and (min-width: 540px){
 
+  /* -------------------- employe-> new.html.twig  ------------------ */
+  .formulaireContainer{
 
+  }
+  .input{
 
+  }
+  .input2{
 
+  }
+  /* ------------------ employe-> login.html.twig ------------------ */
+ 
+  footer{
+    font-size: 15px;
+  }
+  .footer a{
+    margin: 0 5px;
+    padding: 0 10px
+  }
 
 }
 
-@media screen and (min-width: 720px){
+@media screen and (min-width: 768px){
   
-  /* ----- Menu gauche ---- */ 
-  .displayusername{
-    display: inline;
+  /* -------------------- employe-> new.html.twig  ------------------ */
+  .formulaireContainer{
+    width: 580px;
   }
-  
-
+  .input{
+    width: 500px;
+  }
+  .input2{
+    width: 500px;
+  }
+  /* ------------------ employe-> login.html.twig ------------------ */
+  .connexionContainer{
+    width: 400px;
+    height: 400px;
+  }
+  /* ------------ cgu.html.twig --------------- */
+.containerMentions{
+  margin: 50px auto;
+  font-size: 15px;
+  width: 680px;
+ }
 
 }
 
@@ -373,11 +490,76 @@ h5{
 
 @media screen and (min-width: 960px){
 
+   /* --------------- Menu gauche --------------- */ 
+   .displayusername{
+    display: inline;
+  }
+  /* -------------------- employe-> new.html.twig  ------------------ */
+  .formulaireContainer{
+    width: 740px;
+    margin: 70px auto;
+  }
+  .input{
+    width: 710px;
+  }
+  .input2{
+    width: 710px;
+  }
+  .formulaire{
+    width: 710px;
+  }
+  /* ------------------ employe-> login.html.twig ------------------ */
+  .connexionContainer{
+    width: 650px;
+    height: 400px;
+  }
+
+
   
-
-
-
+  
 }
+@media only screen and (max-width: 700px){
+  .tableResponsive table,
+  .tableReponsive thead,
+  .tableResponsive tbody, 
+  .tableResponsive th, 
+  .tableResponsive tr,
+  .tableResponsive td{
+    display: block;
+  }
+  .tableResponsive td{
+    padding-left: 150px;
+    margin-top: -1px;
+    position: relative;
+    background-color: $color5;
+    font-size: 8px;
+  }
+  .tableResponsive td:nth-child(odd){
+    background-color: $color1;
+  }
+  .tableResponsive thead{
+    display: none;
+  }
+  .tableResponsive tr{
+    margin-bottom: 1rem;
+  }
+  .tableResponsive td::before{
+    padding: 10px;
+    content: attr(data-label);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 130px;
+    bottom: 0;
+    background-color: $color4;
+    color: $color5;
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+  }
+}
+
+
 
 
 
