--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,5 +49,8 @@
 					{% endblock %}
 			</div>
 		</div>
+		{% block footer %}
+			{% include "footer.html.twig" %}
+		{% endblock %}
 		</body>
 	</html>
