--- a/templates/sidemenu.html.twig
+++ b/templates/sidemenu.html.twig
@@ -35,7 +35,7 @@
 
 				<p class="m-0">
 					<a href="{{ path('employe_index') }}">
-						<i class="fa fa-list"></i>
+						<i class="fas fa-user"></i>
 						<span class="istyle">
 							<b>Employé</b>
 						</span>
@@ -44,7 +44,7 @@
 				<span class="istyle">
 					<p class="m-0">
 						<i class="fas fa-angle-right"></i>
-						<a href="#">Liste des employés</ahref="#">
+						<a href="#">Liste des employés</a href="#">
 					</p>
 					<p class="m-0">
 						<i class="fas fa-angle-right"></i>
@@ -69,7 +69,7 @@
 
 				<p class="m-0">
 					<a href="{{ path('documents_index') }}">
-						<i class="far fa-file-alt"></i>
+						<i class="fas fa-file-alt"></i>
 						<span class="istyle">
 							<b>Documents</b>
 						</span>
@@ -78,7 +78,7 @@
 				<span class="istyle">
 					<p class="m-0">
 						<i class="fas fa-angle-right"></i>
-						<a href="#">Liste des documents</ahref="#">
+						<a href="#">Liste des documents</a href="#">
 					</p>
 					<p class="m-0">
 						<i class="fas fa-angle-right"></i>
@@ -96,7 +96,7 @@
 
 				<p class="m-0">
 					<a href="{{ path('employe_index') }}">
-						<i class="fa fa-list"></i>
+						<i class="fas fa-user"></i>
 						<span class="istyle">
 							<b>Employé</b>
 						</span>
@@ -105,7 +105,7 @@
 				<span class="istyle">
 					<p class="m-0">
 						<i class="fas fa-angle-right"></i>
-						<a href="#">Liste des employés</ahref="#">
+						<a href="#">Liste des employés</a href="#">
 					</p>
 					<p class="m-0">
 						<i class="fas fa-angle-right"></i>
@@ -134,7 +134,7 @@
 
 				<p class="m-0">
 					<a href="{{ path('documents_index') }}">
-						<i class="far fa-file-alt"></i>
+						<i class="fas fa-file-alt"></i>
 						<span class="istyle">
 							<b>Documents</b>
 						</span>
@@ -143,7 +143,7 @@
 				<span class="istyle">
 					<p class="m-0">
 						<i class="fas fa-angle-right"></i>
-						<a href="#">Documents du service</ahref="#">
+						<a href="#">Documents du service</a href="#">
 					</p>
 					<p class="m-0">
 						<i class="fas fa-angle-right"></i>
@@ -165,7 +165,7 @@
 
 				<p class="m-0">
 					<a href="#">
-						<i class="fa fa-list"></i>
+						<i class="fas fa-user"></i>
 						<span class="istyle">
 							<b>Mon Service</b>
 						</span>
@@ -174,7 +174,7 @@
 				<span class="istyle">
 					<p class="m-0">
 						<i class="fas fa-angle-right"></i>
-						<a href="#">Mes employés</ahref="#">
+						<a href="#">Mes employés</a href="#">
 					</p>
 					<p class="m-0">
 						<i class="fas fa-angle-right"></i>
@@ -211,7 +211,7 @@
 
 			<p class="m-0">
 				<a href="{{ path('documents_index') }}">
-					<i class="far fa-file-alt"></i>
+					<i class="fas fa-file-alt"></i>
 					<span class="istyle">
 						<b>Mes Documents</b>
 					</span>
